公開範囲設定をAPI永続化
